namespace Cli {
    class Input {
        public string read() {
            Console.Write(" -> ");
            return Console.ReadLine();
        }        
    }
}